Changed formatting on app and also added 3 things that it was complaining about when building

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,22 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="androidx.test.core.app.InstrumentationActivityInvoker$BootstrapActivity"
+            android:exported="true">
+            <!-- Intent filters and other activity attributes -->
+        </activity>
+
+        <activity android:name="androidx.test.core.app.InstrumentationActivityInvoker$EmptyActivity"
+            android:exported="true">
+            <!-- Intent filters and other activity attributes -->
+        </activity>
+
+        <activity android:name="androidx.test.core.app.InstrumentationActivityInvoker$EmptyFloatingActivity"
+            android:exported="true">
+            <!-- Intent filters and other activity attributes -->
+        </activity>
+
+
     </application>
 
 </manifest>
